# FastAPI_referral

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
alembic/: env.py
alembic/versions/: 1c3f27abf63e_initial_migration.py  4b90f89a5c35_create_tables.py
commands/: start.sh
src/: conftest.py  main.py
src/api/: auth.py  referral.py  user.py
src/core/: config.py  security.py
src/db/: redis.py  session.py
src/models/: referral.py  user.py
src/schemas/: referral.py  user.py
src/services/: auth.py  referral.py  user.py
src/tests/: fixtures.py  test_referral.py
